Add dev dependencies (ruff, mypy) and fix ruff.toml configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,9 @@ ignore-definitions-if-inherits-from = [
     "Settings",
 ]
 
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+    "ruff>=0.14.4",
+]
+
