--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,7 @@
- [tool.ruff]
- line-length = 88
- target-version = "py311"
+line-length = 88
+target-version = "py312"
+
+[lint]
 extend-select = [
     "B",      # flake8-bugbear
     "C4",     # flake8-comprehensions
@@ -19,17 +20,17 @@ ignore = [
     "B905",   # zip() without strict=, noisy for Py311+
 ]
 
- [tool.ruff.lint.per-file-ignores]
- "tests/**" = ["S101"]
+[lint.per-file-ignores]
+"tests/**" = ["S101"]
 
- [tool.ruff.lint.isort]
- known-first-party = ["your_package"]
- combine-as-imports = true
- force-sort-within-sections = true
+[lint.isort]
+known-first-party = ["transactoid"]
+combine-as-imports = true
+force-sort-within-sections = true
 
- [tool.ruff.format]
- quote-style = "double"
- indent-style = "space"
- skip-magic-trailing-comma = false
- line-ending = "auto"
+[format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
 
