--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "transactoid"
 version = "0.1.0"
@@ -5,6 +9,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[tool.setuptools.packages.find]
+include = ["agents*", "configs*", "db*", "plans*", "prompts*", "services*", "tools*", "ui*"]
 
 [tool.deadcode]
 exclude = [
@@ -41,6 +48,7 @@ ignore-definitions-if-inherits-from = [
 [dependency-groups]
 dev = [
     "mypy>=1.18.2",
+    "pytest>=9.0.0",
     "ruff>=0.14.4",
 ]
 
