--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "promptorium @ git+https://github.com/adambossy/promptorium@main",
+]
 
 [tool.setuptools.packages.find]
 include = ["agents*", "configs*", "db*", "plans*", "prompts*", "services*", "tools*", "ui*"]
