--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "promptorium @ git+https://github.com/adambossy/promptorium@main",
+    "openai>=1.0.0",
+    "PyYAML>=6.0",
 ]
 
 [tool.setuptools.packages.find]
