Update dependencies and reformat code
Updated dependencies in `pyproject.toml` and `uv.lock`, changing
the URL for `promptorium`, and adding several new packages, such
as `openai` and `pydantic`. Reformatted code across multiple files
to adhere to style guidelines by organizing imports and ensuring
consistent line breaks. These changes help improve maintainability
and support for new features.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "promptorium @ git+https://github.com/adambossy/promptorium@main",
+    "promptorium-python @ git+https://github.com/adambossy/promptorium-python@main",
     "openai>=1.0.0",
     "PyYAML>=6.0",
 ]
