Refactor taxonomy tests to use YAML fixture file
The tests for taxonomy have been updated to load sample data
from a YAML fixture file (`sample_taxonomy.yaml`). This reduces
hard-coded data within the test functions and enhances
maintainability. Additionally, rules were added to several
categories in the fixture, and paths are now used to dynamically
locate files.

--- a/tests/fixtures/sample_taxonomy.yaml
+++ b/tests/fixtures/sample_taxonomy.yaml
@@ -3,24 +3,32 @@ categories:
     name: Food
     description: All food spend
     parent_key: null
+    rules: null
 
   - key: food.groceries
     name: Groceries
     description: null
     parent_key: food
+    rules:
+      - grocery
 
   - key: food.restaurants
     name: Restaurants
     description: null
     parent_key: food
+    rules:
+      - restaurant
 
   - key: travel
     name: Travel
     description: null
     parent_key: null
+    rules: null
 
   - key: travel.flights
     name: Flights
     description: null
     parent_key: travel
+    rules:
+      - flight
 
