Add `python-dotenv` for environment variable loading
Updated `plaid_cli.py` to load environment variables from a
`.env` file using `python-dotenv`. Added `python-dotenv` as a
dependency in `pyproject.toml` and `uv.lock`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "promptorium-python @ git+https://github.com/adambossy/promptorium-python@main",
     "openai>=1.0.0",
     "PyYAML>=6.0",
+    "python-dotenv>=1.2.1",
 ]
 
 [tool.setuptools.packages.find]
