--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 transactoid = "ui.cli:agent"
 
 [tool.setuptools.packages.find]
-include = ["agents*", "configs*", "db*", "plans*", "prompts*", "scripts*", "services*", "tools*", "ui*"]
+include = ["agents*", "configs*", "db*", "models*", "plans*", "prompts*", "scripts*", "services*", "tools*", "ui*"]
 
 [tool.deadcode]
 exclude = [
