--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "typer>=0.20.0",
     "openai-agents>=0.5.1",
+    "pydantic>=2.8",
 ]
 
 [project.scripts]
