Implement database service layer with SQLAlchemy
- Add SQLAlchemy dependency to pyproject.toml
- Create complete database schema (db/schema.sql)
- Implement SQLAlchemy ORM models (Merchant, Category, Transaction, Tag, TransactionTag)
- Implement DB class with session management and all required methods:
  - Category methods (fetch_categories, replace_categories_rows, get_category_id_by_key)
  - Merchant methods (find_merchant_by_normalized_name, create_merchant) with normalization
  - Transaction methods (get_transaction_by_external, insert_transaction, update_transaction_mutable, fetch_transactions_by_ids_preserving_order)
  - run_sql method for raw SQL execution
  - save_transactions with immutability checks
  - Tag methods (upsert_tag, attach_tags)
  - Bulk operations (recategorize_unverified_by_merchant, delete_transactions_by_external_ids)
  - compact_schema_hint for LLM prompts
- All linting errors fixed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "typer>=0.20.0",
     "openai-agents>=0.5.1",
     "pydantic>=2.8",
+    "sqlalchemy>=2.0",
 ]
 
 [project.scripts]
