--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "openai-agents>=0.5.1",
     "pydantic>=2.8",
     "sqlalchemy>=2.0",
+    "psycopg2-binary>=2.9.11",
 ]
 
 [project.scripts]
