--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic>=2.8",
     "sqlalchemy>=2.0",
     "psycopg2-binary>=2.9.11",
+    "alembic>=1.17.2",
 ]
 
 [project.scripts]
