Update to use `DATABASE_URL` exclusively for DB config

--- a/alembic.ini
+++ b/alembic.ini
@@ -91,7 +91,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-# The URL is read from TRANSACTOID_DATABASE_URL or DATABASE_URL environment variables
+# The URL is read from DATABASE_URL environment variable (loaded from .env file)
 sqlalchemy.url =
 
 
