Add return type annotation to main()

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,7 @@ mypy_path = src, app
 
 # Roadmap for gradual strictness (enable one at a time):
 # 1. strict = True
+strict = True
 #    (includes: warn_redundant_casts, warn_unreachable, warn_return_any,
 #     no_implicit_reexport, disallow_untyped_defs, disallow_untyped_calls,
 #     disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
