Enable disallow_any_unimported in mypy config

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,6 +13,7 @@ strict = True
 #     disallow_any_generics, disallow_subclassing_any, warn_unused_ignores,
 #     strict_equality, strict_concatenate)
 # 2. disallow_any_unimported = True
+disallow_any_unimported = True
 # 3. disallow_any_decorated = True
 # 4. disallow_any_expr = True
 
