Enable disallow_any_decorated in mypy config

--- a/mypy.ini
+++ b/mypy.ini
@@ -15,6 +15,7 @@ strict = True
 # 2. disallow_any_unimported = True
 disallow_any_unimported = True
 # 3. disallow_any_decorated = True
+disallow_any_decorated = True
 # 4. disallow_any_expr = True
 
 [mypy-tests.*]
