Document disallow_any_expr limitation (242 errors in API code)

--- a/mypy.ini
+++ b/mypy.ini
@@ -17,6 +17,8 @@ disallow_any_unimported = True
 # 3. disallow_any_decorated = True
 disallow_any_decorated = True
 # 4. disallow_any_expr = True
+# NOTE: Produces 242 errors, mostly in Plaid API code (dict[str, Any] from JSON responses)
+# disallow_any_expr = True
 
 [mypy-tests.*]
 allow_untyped_defs = True
