Clean up mypy.ini roadmap comments

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,21 +4,17 @@ show_error_codes = True
 warn_unused_configs = True
 mypy_path = src, app
 
-# Roadmap for gradual strictness (enable one at a time):
-# 1. strict = True
+# Strict mode includes: warn_redundant_casts, warn_unreachable, warn_return_any,
+# no_implicit_reexport, disallow_untyped_defs, disallow_untyped_calls,
+# disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
+# disallow_any_generics, disallow_subclassing_any, warn_unused_ignores,
+# strict_equality, strict_concatenate
 strict = True
-#    (includes: warn_redundant_casts, warn_unreachable, warn_return_any,
-#     no_implicit_reexport, disallow_untyped_defs, disallow_untyped_calls,
-#     disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
-#     disallow_any_generics, disallow_subclassing_any, warn_unused_ignores,
-#     strict_equality, strict_concatenate)
-# 2. disallow_any_unimported = True
 disallow_any_unimported = True
-# 3. disallow_any_decorated = True
 disallow_any_decorated = True
-# 4. disallow_any_expr = True
-# NOTE: Produces 242 errors, mostly in Plaid API code (dict[str, Any] from JSON responses)
-# disallow_any_expr = True
+
+# disallow_any_expr is intentionally disabled - would produce 242 errors in Plaid
+# API code due to dict[str, Any] from JSON responses. Impractical for this codebase.
 
 [mypy-tests.*]
 allow_untyped_defs = True
