Format strict mode directives as bulleted list for readability

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,11 +4,21 @@ show_error_codes = True
 warn_unused_configs = True
 mypy_path = src, app
 
-# Strict mode includes: warn_redundant_casts, warn_unreachable, warn_return_any,
-# no_implicit_reexport, disallow_untyped_defs, disallow_untyped_calls,
-# disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
-# disallow_any_generics, disallow_subclassing_any, warn_unused_ignores,
-# strict_equality, strict_concatenate
+# Strict mode includes:
+#   - warn_redundant_casts
+#   - warn_unreachable
+#   - warn_return_any
+#   - no_implicit_reexport
+#   - disallow_untyped_defs
+#   - disallow_untyped_calls
+#   - disallow_incomplete_defs
+#   - check_untyped_defs
+#   - disallow_untyped_decorators
+#   - disallow_any_generics
+#   - disallow_subclassing_any
+#   - warn_unused_ignores
+#   - strict_equality
+#   - strict_concatenate
 strict = True
 disallow_any_unimported = True
 disallow_any_decorated = True
