--- a/ruff.toml
+++ b/ruff.toml
@@ -22,6 +22,8 @@ ignore = [
 
 [lint.per-file-ignores]
 "tests/**" = ["S101"]
+"evals/core/llm_judge.py" = ["E501"]
+"evals/data/fixtures.py" = ["E501"]
 
 [lint.isort]
 known-first-party = ["transactoid"]
