Add `adapters` and `frontends` to package include list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
 transactoid = "ui.cli:agent"
 
 [tool.setuptools.packages.find]
-include = ["agents*", "configs*", "db*", "models*", "plans*", "prompts*", "scripts*", "services*", "tools*", "ui*"]
+include = ["adapters*", "agents*", "configs*", "db*", "frontends*", "models*", "orchestrators*", "plans*", "prompts*", "scripts*", "services*", "tools*", "ui*"]
 
 [tool.deadcode]
 exclude = [
