chore(deadcode): exclude migration directories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ exclude = [
     ".venv/**",
     ".worktrees/",
     ".worktrees/**",
+    "db/migrations/",
+    "db/migrations/**",
+    "**/migrations/",
+    "**/migrations/**",
     "build/",
     "dist/",
     "**/site-packages/",
