--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "rich>=13.0.0",
     "resend>=2.0.0",
     "boto3>=1.26.0",
+    "google-adk>=1.14.0",
 ]
 
 [project.optional-dependencies]
