chore(deadcode): exclude runtime entrypoints and remove true unused code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,21 @@ exclude = [
     ".venv/**",
     ".worktrees/",
     ".worktrees/**",
+    "db/migrations/",
+    "db/migrations/**",
+    "**/migrations/",
+    "**/migrations/**",
+    "src/transactoid/adapters/db/models.py",
+    "src/transactoid/ui/mcp/server.py",
+    "src/transactoid/ui/cli.py",
+    "src/transactoid/ui/chatkit/server.py",
+    "src/transactoid/ui/chatkit/adapter.py",
+    "src/transactoid/ui/stream_renderer.py",
+    "scripts/run.py",
+    "src/transactoid/jobs/report/",
+    "src/transactoid/jobs/report/**",
+    "evals/core/",
+    "evals/core/**",
     "build/",
     "dist/",
     "**/site-packages/",
@@ -61,6 +76,15 @@ ignore-names = [
     "logger",
     "LOGGER",
     "*_fixture",
+    "created_at",
+    "updated_at",
+    "input_schema",
+    "confidence_level",
+    "detailed",
+    "primary",
+    "enum",
+    "properties",
+    "required",
 ]
 ignore-names-in-files = [
     "*/__init__.py",
@@ -70,11 +94,27 @@ ignore-names-in-files = [
 ignore-definitions = [
     "Migration",
     "*Migration",
+    "RecategorizeTool",
+    "TagTransactionsTool",
+    "create_context",
 ]
 ignore-definitions-if-inherits-from = [
     "BaseModel",
     "Schema",
     "Settings",
+    "Protocol",
+    "BaseHTTPRequestHandler",
+    "_StoreBase",
+]
+ignore-definitions-if-decorated-with = [
+    "mcp.tool",
+    "mcp.prompt",
+    "app.command",
+    "run_app.command",
+    "app.callback",
+    "app.get",
+    "app.post",
+    "function_tool",
 ]
 
 [dependency-groups]
