--- a/fly.toml
+++ b/fly.toml
@@ -22,9 +22,18 @@ primary_region = "iad"  # US East - close to Supabase
 # Note: Secrets should be set via CLI:
 #   fly secrets set DATABASE_URL="postgresql://..."
 #   fly secrets set OPENAI_API_KEY="..."
+#   fly secrets set ANTHROPIC_API_KEY="..."
+#   fly secrets set GOOGLE_API_KEY="..."
 #   fly secrets set RESEND_API_KEY="..."
 #   fly secrets set PLAID_CLIENT_ID="..."
-#   fly secrets set PLAID_SECRET="..."
+#   fly secrets set PLAID_PRODUCTION_SECRET="..."
+#   fly secrets set PLAID_SANDBOX_SECRET="..."
+#   fly secrets set PLAID_ACCESS_TOKEN="..."
+#   fly secrets set PLAID_ENV="production"
+#   fly secrets set BROWSERBASE_PROJECT_ID="..."
+#   fly secrets set BROWSERBASE_API_KEY="..."
+#   fly secrets set TRANSACTOID_AGENT_PROVIDER="gemini"
+#   fly secrets set TRANSACTOID_AGENT_MODEL="gemini-3.0-pro"
 #   fly secrets set REPORT_RECIPIENTS="user@example.com"  # Optional override
 
 # To run manually:
